# pachislo-wasm

./: Cargo.toml  README.md  TESTING.md  test.sh
src/: alias.rs  lib.rs
tests/: wasm_tests.rs
