[package]
name = "pachislo-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tsify = "0.5.5"
wasm-bindgen = "0.2.100"
pachislo = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
rand = "0.9.2"

[dependencies.getrandom]
version = "0.3.3"
features = ["wasm_js"]
